
v0.1.1.a5:
 * removed the StatusedEntity and its tests, with the introduction of
   StatusMixin, it is not necessary any more
 * added camera_lens.py to the examples, which shows how to extend SOM in its
   very basic form, also added tests testing this example
 * changed the database uri for the DatabaseTester, it now uses an in memory
   SQLite database instead a file based one.

v0.1.1.a4:
 * changed the arguments of the stalker.db.mixins.ReferenceMixin.setup
   function, to allow carrying the data from one to the next mixin (this part
   still needs a lot of attention)
 * removed the unnecessary "statusedEntity_statuses" secondary table, because
   one StatusedEntity owns just one StatusList its a many2one relation, so no
   need to have a secondary table
 * introduced the StatusMixin (will replace StatusedEntity soon)
 * added a new example for the usage of StatusMixin
 * updated the ReferenceMixin.setup function, now it takes three arguments, the
   class, table and the mapper_options dictionary

v0.1.1.a3:
 * removed the included *tests* from the egg build
 * added/fixed equality and inequality operators for classes:
  * Department
  * StatusedEntity
 * SimpleEntity now has a **kwargs in the __init__ so it doesn't give TypeError
   for extra keywords
 * added EntityMeta metaclass which adds entity_type attribute and sets its
   value to the unicode version of the name of the class
 * the SimpleEntity uses the EntityMeta metaclass to automatically add all the
   entity_type attribute to all the derived classes
 * all the mappers now uses the ClassName.entity_type class attribute as the
   polymorphic identity
 * instead of LBYL moving toward EAFP idiom for all the models in the
   stalker.core
 * StatusList now supports indexing
 * StatusList now has an target_entity_type attribute which accepts strings
   with the class name and shows the compatible class of this StatusList
 * StatusList.__eq__ now checks for the target_entity_type also