@@ -13,26 +13,26 @@ Below you can find the roadmap based on the version
 ------
  * A complete working set of models in SOM
 
-0.2.0:
+0.1.1:
 ------
  * The SQLAlchemy integration to have the database part, tables and mappers
 
-0.3.0:
+0.1.3:
 ------
  * Ability to extend SOM
 
-0.5.0:
+0.1.5:
 ------
  * Interactions with host programs (MAYA, NUKE, HOUDINI etc.)
 
-1.0.0:
+0.2.0:
 ------
  * PyQt/PySide interfaces
 
-1.5.0:
+0.5.0:
 ------
  * Web interface
 
-2.0.0:
+1.0.0:
 ------
  * New feature that I can't really see right now.
