@@ -141,6 +141,8 @@ def setup():
             "email": synonym("_email"),
             "_password": tables.users.c.password,
             "password": synonym("_password"),
+            "_last_login": tables.users.c.last_login,
+            "last_login": synonym("last_login"),
         },
     )
     
